티켓포인트다이얼로그

--- a/app/src/main/res/layout/dialog_notice_ticket_point.xml
+++ b/app/src/main/res/layout/dialog_notice_ticket_point.xml
@@ -5,7 +5,7 @@
     android:background="@android:color/transparent"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="316dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/bg_round_white_12"
         app:layout_constraintStart_toStartOf="parent"
@@ -17,7 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="22dp"
-            android:text="티켓포인트로 전환이란?"
+            android:text="@string/tv_notice_title"
             android:textColor="@color/TextBlack"
             android:textSize="18sp"
             android:gravity="center"
@@ -31,10 +31,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="23dp"
-            android:text="불가피한 상황으로 버스 탑승을\n하지 못했을 때 티켓을 포인트로 전환하는 제도입니다."
+            android:layout_marginStart="23dp"
+            android:layout_marginEnd="23dp"
+            android:text="@string/tv_explain1"
             android:textColor="@color/TextGray"
             android:textSize="13sp"
             android:gravity="center"
+            android:bufferType="spannable"
             app:layout_constraintBottom_toTopOf="@id/tv_explain2"
             app:layout_constraintTop_toBottomOf="@id/tv_title"
             app:layout_constraintStart_toStartOf="parent"
@@ -45,10 +48,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="14dp"
-            android:text="티켓 포인트 전환은 1일 1회만 가능하며,\n총 2회 사용할 수 있어요"
+            android:text="@string/tv_explain2"
             android:textColor="@color/TextGray"
             android:textSize="13sp"
             android:gravity="center"
+            android:bufferType="spannable"
             app:layout_constraintTop_toBottomOf="@id/tv_explain1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -68,7 +72,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="6dp"
-            android:text="1.'티켓 포인트로 전환'\n클릭!"
+            android:text="@string/tv_touch"
             android:textColor="@color/TextGray"
             android:textSize="11sp"
             android:gravity="center"
@@ -87,7 +91,7 @@
             android:id="@+id/tv_calendar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="2.달력에서 날짜\n선택!"
+            android:text="@string/tv_calendar"
             android:textColor="@color/TextGray"
             android:textSize="11sp"
             android:gravity="center"
@@ -110,7 +114,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="6dp"
             android:layout_marginBottom="33dp"
-            android:text="3.전환 포인트 확인"
+            android:text="@string/tv_spell_check"
             android:textColor="@color/TextGray"
             android:textSize="11sp"
             android:gravity="center"
@@ -131,7 +135,7 @@
             android:id="@+id/tv_done"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="4.완료!!"
+            android:text="@string/tv_done"
             android:textColor="@color/TextGray"
             android:textSize="11sp"
             android:gravity="center"
