--- a/app/src/main/res/layout/fragment_nav_personal_history_ticket.xml
+++ b/app/src/main/res/layout/fragment_nav_personal_history_ticket.xml
@@ -190,13 +190,16 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toTopOf="@id/stroke_convert_point"/>
             <ImageView
+                android:id="@+id/iv_transform_info"
                 android:layout_width="18dp"
                 android:layout_height="18dp"
                 android:layout_marginEnd="23dp"
                 android:src="@drawable/icon_help"
+                android:clickable="true"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@id/tv_convert_point"
-                app:layout_constraintBottom_toBottomOf="@id/tv_convert_point"/>
+                app:layout_constraintBottom_toBottomOf="@id/tv_convert_point"
+                android:onClick="@{NavPersonalHistoryTicketFrag::onTransformInfoClick}"/>
             <View
                 android:id="@+id/stroke_convert_point"
                 android:layout_width="match_parent"
@@ -228,7 +231,14 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
-            
+        <FrameLayout
+            android:id="@+id/Frame_info"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
