포인트 전환페이지/데이트 피커(datepicker.version)/헤더 없애려고 하다보니 하단이 잘리는 버그가 있어서 캘린더뷰로 다시하기 전에 커밋함.

--- a/app/src/main/res/layout/fragment_nav_personal_history_ticket.xml
+++ b/app/src/main/res/layout/fragment_nav_personal_history_ticket.xml
@@ -188,7 +188,8 @@
                 android:textSize="14sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toTopOf="@id/stroke_convert_point"/>
+                app:layout_constraintBottom_toTopOf="@id/stroke_convert_point"
+                android:onClick="@{NavPersonalHistoryTicketFrag::onTicketPointClick}"/>/>
             <ImageView
                 android:id="@+id/iv_transform_info"
                 android:layout_width="18dp"
