--- a/app/src/main/res/drawable/circle_indicator_sel.xml
+++ b/app/src/main/res/drawable/circle_indicator_sel.xml
@@ -1,12 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item>
-        <shape android:shape="rectangle">
-            <solid android:color="@color/Primary"/>
-            <corners android:radius="5dp"/>
-            <size android:height="10dp"/>
-            <size android:width="10dp"/>
-        </shape>
-
-    </item>
-</selector>
+<shape android:shape="rectangle"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <solid android:color="@color/Primary"/>
+    <corners android:radius="5dp"/>
+    <size android:height="10dp"/>
+    <size android:width="10dp"/>
+</shape>
