--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -30,8 +30,9 @@
     <style name="btStyle">
         <item name="android:layout_height">48dp</item>
         <item name="android:layout_width">0dp</item>
-        <item name="android:layout_marginStart">18dp</item>
-        <item name="android:layout_marginEnd">18dp</item>
+        <item name="android:layout_marginStart">20dp</item>
+        <item name="android:layout_marginEnd">20dp</item>
+        <item name="android:layout_marginBottom">50dp</item>
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">@color/White</item>
     </style>
