--- a/app/src/main/res/layout/dialog_date_picker.xml
+++ b/app/src/main/res/layout/dialog_date_picker.xml
@@ -6,17 +6,16 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/bg_dialog"
+        android:background="@drawable/bg_round12_white"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent">
-        <DatePicker
+        <CalendarView
             android:id="@+id/date_picker"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="300dp"
+            android:layout_height="295dp"
             android:layout_marginTop="12dp"
-            android:paddingBottom="10dp"
             android:datePickerMode="spinner"
             android:spinnersShown="false"
             app:layout_constraintBottom_toTopOf="@id/tv_cancel"
