--- a/app/src/main/res/layout/fragment_nav_personal_history_ticket_point.xml
+++ b/app/src/main/res/layout/fragment_nav_personal_history_ticket_point.xml
@@ -56,6 +56,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:src="@drawable/ic_date_range"
+
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"/>
@@ -63,36 +64,36 @@
                 android:id="@+id/tv_year_value"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="44dp"
-                android:text="2020"
+                android:text=""
                 android:textSize="18sp"
                 android:textColor="@color/TextBlack"
-                app:layout_constraintStart_toEndOf="@id/iv_date_range"
-
+                app:layout_constraintEnd_toStartOf="@id/tv_year"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"/>
             <com.thustop_00.widgets.NotoTextView
                 android:id="@+id/tv_year"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="2dp"
+                android:layout_marginStart="86dp"
+                android:layout_marginTop="2dp"
+                android:layout_marginEnd="2dp"
+                android:layout_marginBottom="2dp"
                 android:text="년"
                 android:textSize="14sp"
                 android:textColor="@color/TextBlack"
-                app:layout_constraintStart_toEndOf="@id/tv_year_value"
+                app:layout_constraintStart_toEndOf="@id/iv_date_range"
                 app:layout_constraintBottom_toBottomOf="@id/tv_year_value"/>
 
             <com.thustop_00.widgets.NotoTextView
                 android:id="@+id/tv_month_value"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="11"
+                android:text=""
                 android:textColor="@color/TextBlack"
                 android:textSize="18sp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@id/tv_day_value"
                 app:layout_constraintHorizontal_bias="0.464"
-                app:layout_constraintStart_toEndOf="@id/tv_year"
+                app:layout_constraintEnd_toStartOf="@id/tv_month"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <com.thustop_00.widgets.NotoTextView
@@ -103,15 +104,15 @@
                 android:text="월"
                 android:textSize="14sp"
                 android:textColor="@color/TextBlack"
-                app:layout_constraintStart_toEndOf="@id/tv_month_value"
-
+                app:layout_constraintEnd_toStartOf="@id/tv_day_value"
+                app:layout_constraintStart_toEndOf="@id/tv_year"
                 app:layout_constraintBottom_toBottomOf="@id/tv_month_value"/>
 
             <com.thustop_00.widgets.NotoTextView
                 android:id="@+id/tv_day_value"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="11"
+                android:text=""
                 android:textColor="@color/TextBlack"
                 android:textSize="18sp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -190,12 +191,6 @@
             app:layout_constraintEnd_toEndOf="parent"/>
 
 
-
-
-
-
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-
 
 </layout>
