--- a/app/src/main/res/layout/item_route.xml
+++ b/app/src/main/res/layout/item_route.xml
@@ -131,7 +131,7 @@
             app:notoTextStyle="regular" />
 
         <com.thustop_00.widgets.NotoTextView
-            android:id="@+id/tv_mrv_destination"
+            android:id="@+id/tv_mrv_destination3"
             android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
@@ -152,12 +152,12 @@
             android:text="잠실역2번출구"
             android:textColor="@color/TextBlack"
             android:textSize="10sp"
-            app:layout_constraintStart_toStartOf="@id/tv_mrv_destination"
+            app:layout_constraintStart_toStartOf="@id/tv_mrv_destination3"
             app:layout_constraintTop_toTopOf="@id/iv_mrv_route_line"
             app:notoTextStyle="regular" />
 
         <com.thustop_00.widgets.NotoTextView
-            android:id="@+id/tv_mrv_destination3"
+            android:id="@+id/tv_mrv_destination1"
             android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="68dp"
@@ -165,7 +165,7 @@
             android:text="판교 테크노벨리"
             android:textColor="@color/TextBlack"
             android:textSize="10sp"
-            app:layout_constraintStart_toStartOf="@id/tv_mrv_destination"
+            app:layout_constraintStart_toStartOf="@id/tv_mrv_destination3"
             app:layout_constraintTop_toTopOf="@id/iv_mrv_route_line"
             app:notoTextStyle="regular" />
 
