--- a/app/src/main/res/layout/item_via_list.xml
+++ b/app/src/main/res/layout/item_via_list.xml
@@ -6,7 +6,7 @@
     android:layout_height="57dp">
 
     <com.thustop_00.widgets.NotoTextView
-        android:id="@+id/tv_time"
+        android:id="@+id/tv_rd_time"
         android:layout_width="27dp"
         android:layout_height="16dp"
         android:layout_marginStart="18dp"
@@ -17,7 +17,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.thustop_00.widgets.NotoTextView
-        android:id="@+id/notoTextView2"
+        android:id="@+id/tv_rd_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="35dp"
@@ -26,7 +26,7 @@
         android:textSize="14sp"
         app:notoTextStyle="regular"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/tv_time"
+        app:layout_constraintStart_toEndOf="@+id/tv_rd_time"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.Guideline
@@ -48,23 +48,23 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <View
-        android:id="@+id/v_upper_route"
+        android:id="@+id/v_upper_line"
         android:layout_width="4dp"
         android:layout_height="0dp"
         android:background="@color/Primary"
         app:layout_constraintBottom_toTopOf="@id/guideline3"
-        app:layout_constraintEnd_toStartOf="@id/notoTextView2"
-        app:layout_constraintStart_toEndOf="@id/tv_time"
+        app:layout_constraintEnd_toStartOf="@id/tv_rd_name"
+        app:layout_constraintStart_toEndOf="@id/tv_rd_time"
         app:layout_constraintTop_toTopOf="parent" />
 
     <View
-        android:id="@+id/v_lower_route"
+        android:id="@+id/v_lower_line"
         android:layout_width="4dp"
         android:layout_height="0dp"
         android:background="@color/Primary"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/notoTextView2"
-        app:layout_constraintStart_toEndOf="@id/tv_time"
+        app:layout_constraintEnd_toStartOf="@id/tv_rd_name"
+        app:layout_constraintStart_toEndOf="@id/tv_rd_time"
         app:layout_constraintTop_toBottomOf="@id/guideline3" />
 
     <ImageView
@@ -72,8 +72,8 @@
         android:layout_width="6dp"
         android:layout_height="6dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/notoTextView2"
-        app:layout_constraintStart_toEndOf="@+id/tv_time"
+        app:layout_constraintEnd_toStartOf="@id/tv_rd_name"
+        app:layout_constraintStart_toEndOf="@+id/tv_rd_time"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/icon_via_green" />
 
