--- a/app/src/main/res/layout/dialog_date_picker.xml
+++ b/app/src/main/res/layout/dialog_date_picker.xml
@@ -11,17 +11,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent">
+
         <CalendarView
             android:id="@+id/date_picker"
             android:layout_width="300dp"
-            android:layout_height="295dp"
-            android:layout_marginTop="12dp"
+            android:layout_height="310dp"
+            android:background="@android:color/transparent"
             android:datePickerMode="spinner"
             android:spinnersShown="false"
             app:layout_constraintBottom_toTopOf="@id/tv_cancel"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
         <com.thustop_00.widgets.NotoTextView
             android:id="@+id/tv_cancel"
             android:layout_width="0dp"
