노선 조회 맵 완성(추후 재활용해야함), 탑승 신청 레이아웃 작업하다 힘들어 도망

--- a/app/src/main/res/layout/fragment_route_detail.xml
+++ b/app/src/main/res/layout/fragment_route_detail.xml
@@ -2,6 +2,14 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
+
+    <data>
+
+        <variable
+            name="routeDetailFrag"
+            type="com.thustop_00.RouteDetailFragment" />
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -93,6 +101,7 @@
                     android:background="?attr/selectableItemBackgroundBorderless"
                     android:clickable="true"
                     android:focusable="true"
+                    android:onClick="@{routeDetailFrag::onMapIconClick}"
                     android:padding="5dp"
                     app:layout_constraintBottom_toTopOf="@id/rv_vias"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -231,9 +240,9 @@
             android:text="노선 신청하기"
             android:textColor="@color/White"
             android:textSize="16sp"
-            app:notoTextStyle="medium"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:notoTextStyle="medium" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
