--- a/app/src/main/res/drawable/bg_ticket_red.xml
+++ b/app/src/main/res/drawable/bg_ticket_red.xml
@@ -12,7 +12,7 @@
 
     <item android:left="20dp">
         <shape android:shape="rectangle">
-            <solid android:color="@color/ContainerTint"/>
+            <solid android:color="@color/White"/>
             <corners android:topRightRadius="15dp"
                 android:bottomRightRadius="15dp"/>
         </shape>
