--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,6 +7,11 @@
         <item name="colorAccent">@color/Primary</item>
     </style>
 
+    <style name="CustomFullDialog"><!--화면 꽉채우는 다이얼로그 만들 때 이용-->
+        <item name="android:windowFullscreen">false</item>
+        <item name="android:windowIsFloating">true</item>
+    </style>
+
     <style name="EtStyle">
         <item name="android:paddingStart">24dp</item>
         <item name="android:paddingTop">14dp</item>
