--- a/app/src/main/res/drawable/checkbox_round_un.xml
+++ b/app/src/main/res/drawable/checkbox_round_un.xml
@@ -2,15 +2,15 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="oval">
-            <solid android:color="@color/ButtonGray"/>
+            <solid android:color="@color/ButtonGray" />
 
-            <size android:height="19dp"/>
-            <size android:width="19dp"/>
+            <size android:height="19dp" />
+            <size android:width="19dp" />
         </shape>
     </item>
     <item
-        android:gravity="center"
         android:drawable="@drawable/icon_check_white"
-        >
+        android:gravity="center">
+
     </item>
 </layer-list>
