--- a/app/src/main/res/layout/fragment_boarding_application.xml
+++ b/app/src/main/res/layout/fragment_boarding_application.xml
@@ -97,7 +97,7 @@
                     app:srcCompat="@drawable/icon_3dots_gray" />
 
                 <ImageView
-                    android:id="@+id/iv_fba_left_dots2"
+                    android:id="@+id/iv_fba_right_dots"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     app:layout_constraintBottom_toBottomOf="@+id/tv_fba_phase2"
