--- a/app/src/main/res/layout/item_stop_selection.xml
+++ b/app/src/main/res/layout/item_stop_selection.xml
@@ -72,6 +72,7 @@
         android:id="@+id/iv_iss_checkbox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:padding="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/tv_iss_name"
         app:layout_constraintStart_toEndOf="@+id/tv_iss_time"
