boardingApplication 투두 추가.그 페이지에서 탑승지 하차지 관리 안하면, 데이터 구조 바꿔야함//분리 코드 썼다가 취소함(워드로 저장해놓음=나중에 쓸까봐)///뒤에 시간 지정 페이지, 확인페이지, 완료페이지 연결 후 마치면 메인으로 가게 프래그먼트 설정함//// boardingApplication에서 쓰는 안만든줄 알고 체크만들었는데 나중에 안쓰면 삭제하겠음!!

--- a/app/src/main/res/layout/fragment_boarding_application.xml
+++ b/app/src/main/res/layout/fragment_boarding_application.xml
@@ -186,6 +186,7 @@
             android:text="확인"
             android:textColor="@color/White"
             android:textSize="16sp"
+            android:onClick="@{BoardingApplicationFrag::onBtIssOkClick}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:notoTextStyle="medium" />
