노선 추가 마무리, 정류장 맵 핀 변경, 앱 종료 동작 다듬음, 상담창과 깃플 추가함

--- a/app/src/main/res/layout/fragment_boarding_application_passenger_info.xml
+++ b/app/src/main/res/layout/fragment_boarding_application_passenger_info.xml
@@ -288,14 +288,15 @@
             android:layout_width="match_parent"
             android:layout_height="69dp"
             android:background="@color/ButtonGray"
+            android:enabled="false"
             android:gravity="center"
+            android:onClick="@{BoardingApplicationPassengerInfoFrag::onBtOkClick}"
             android:text="결제 하기"
             android:textColor="@color/White"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:notoTextStyle="medium"
-            android:onClick="@{BoardingApplicationPassengerInfoFrag::onBtOkClick}"/>
+            app:notoTextStyle="medium" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
