--- a/app/src/main/res/drawable/bg_ticket_green.xml
+++ b/app/src/main/res/drawable/bg_ticket_green.xml
@@ -19,7 +19,8 @@
         <shape android:shape="rectangle">
             <stroke android:width="1dp"
                 android:color="@color/ContainerStroke"/>
-            <corners android:radius="13dp"/>
+            <corners android:topLeftRadius="13dp"
+                android:bottomLeftRadius="13dp"/>
         </shape>
     </item>
 
