--- a/app/src/main/res/drawable/bg_ticket_red.xml
+++ b/app/src/main/res/drawable/bg_ticket_red.xml
@@ -13,15 +13,14 @@
     <item android:left="20dp">
         <shape android:shape="rectangle">
             <solid android:color="@color/White"/>
-            <corners android:topRightRadius="15dp"
-                android:bottomRightRadius="15dp"/>
         </shape>
     </item>
     <item>
         <shape android:shape="rectangle">
             <stroke android:width="1dp"
                 android:color="@color/ContainerStroke"/>
-            <corners android:radius="13dp"/>
+            <corners android:topLeftRadius="13dp"
+                android:bottomLeftRadius="13dp"/>
         </shape>
     </item>
 
