--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -350,6 +350,7 @@
                     <com.thustop_00.widgets.NotoTextView
                         android:id="@+id/tv_FAQ"
                         style="@style/tvToolbarComponent"
+                        android:onClick="testToolbarLogin"
                         android:text="FAQ"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/tv_customer_center" />
@@ -357,7 +358,7 @@
                     <com.thustop_00.widgets.NotoTextView
                         android:id="@+id/tv_consultation"
                         style="@style/tvToolbarComponent"
-                        android:onClick="testToolbarLogin"
+                        android:onClick="onCounselClick"
                         android:text="상담 1:1"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/tv_FAQ" />
