--- a/app/src/main/res/layout/fragment_nav_personal_history_history.xml
+++ b/app/src/main/res/layout/fragment_nav_personal_history_history.xml
@@ -19,10 +19,22 @@
             android:text="이용내역이 없습니다"
             android:textColor="@color/TextBlack"
             android:textSize="20sp"
+            android:visibility="gone"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_history"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginTop="12dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            tools:listitem="@layout/item_history"/>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
