--- a/app/src/main/res/layout/fragment_request_town_service.xml
+++ b/app/src/main/res/layout/fragment_request_town_service.xml
@@ -18,12 +18,12 @@
             android:orientation="horizontal"
             app:layout_constraintGuide_begin="?attr/actionBarSize" />
 
-
         <ImageView
             android:id="@+id/iv_town"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/img_intro1"
+            android:layout_marginTop="90dp"
+            android:src="@drawable/img_town_bus"
             app:layout_constraintTop_toTopOf="@id/guideline1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -32,7 +32,12 @@
             android:id="@+id/tv_1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="22dp"
             android:text="@string/tv_town_1"
+            android:textSize="16sp"
+            android:textColor="@color/TextBlack"
+            android:letterSpacing="-0.07"
+            app:notoTextStyle="medium"
             app:layout_constraintTop_toBottomOf="@id/iv_town"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
@@ -41,31 +46,44 @@
             android:id="@+id/tv_2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginRight="6dp"
             android:text="@string/tv_town_2"
+            android:letterSpacing="-0.07"
+            android:textSize="10sp"
+            android:textColor="@color/Primary"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_1"/>
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/cl_townSel"
-            android:layout_width="wrap_content"
+            android:layout_width="214dp"
             android:layout_height="48dp"
+            android:layout_marginTop="24dp"
             android:background="@drawable/bg_outline25_green"
             android:clickable="true"
             android:focusable="true"
             android:onClick="@{RequestTownFrag::onRegionSelectClick}"
-            android:paddingStart="50dp"
-            android:paddingEnd="50dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_2">
-
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="22dp"
+                android:src="@drawable/ic_down_gray"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"/>
             <com.thustop_00.widgets.NotoTextView
                 android:id="@+id/tv_townSel"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:layout_marginStart="67dp"
+                android:layout_marginEnd="50dp"
                 android:gravity="center"
                 android:text="@string/tv_townSel"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -75,46 +93,64 @@
             android:id="@+id/cb_message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="75dp"
+            android:paddingStart="5dp"
             android:text="@string/cb_town_message"
+            android:textColor="@color/TextBlack"
+            android:textSize="13sp"
+            android:letterSpacing="-0.1"
             android:button="@drawable/checkbox_round"
             app:layout_constraintTop_toBottomOf="@id/cl_townSel"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
+
         <com.thustop_00.widgets.NotoEditText
             android:id="@+id/et_phoneNum"
             android:layout_width="match_parent"
-            android:layout_height="43dp"
-            android:layout_marginStart="30dp"
-            android:layout_marginEnd="30dp"
-            android:paddingStart="30dp"
+            android:layout_height="48dp"
+            android:layout_marginStart="38dp"
+            android:layout_marginEnd="38dp"
+            android:layout_marginTop="18dp"
             android:background="@drawable/bg_round25_grayf5"
             android:hint="@string/et_town_hint"
-            android:textSize="14dp"
+            android:textColorHint="@color/TextGray"
+            android:textColor="@color/TextBlack"
             android:inputType="numberDecimal"
             android:maxLength="11"
             android:maxLines="1"
-            app:layout_constraintTop_toBottomOf="@id/cb_message"
+            android:paddingStart="30dp"
+            android:textSize="14dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintTop_toBottomOf="@id/cb_message" />
 
         <com.thustop_00.widgets.NotoTextView
+            android:id="@+id/tv_townSel2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="6dp"
             android:text="@string/tv_town_notice"
-            android:textSize="10dp"
+            android:textSize="9sp"
+            android:textColor="@color/TextGray"
             app:layout_constraintTop_toBottomOf="@id/et_phoneNum"
             app:layout_constraintStart_toStartOf="@id/et_phoneNum"
             app:layout_constraintEnd_toEndOf="@id/et_phoneNum"/>
 
         <com.thustop_00.widgets.NotoButton
+            android:id="@+id/bt_request"
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
-            android:layout_marginBottom="40dp"
-            android:background="@drawable/bg_round25_green"
+            android:layout_marginBottom="50dp"
+            android:background="@drawable/bg_round25_graycf"
             android:text="@string/bt_town_request"
+            android:textSize="16sp"
+            android:textColor="@color/White"
+            android:clickable="false"
             android:onClick="@{RequestTownFrag::onRequestClick}"
+            app:notoTextStyle="medium"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
