--- a/app/src/main/res/layout/fragment_add_route_map.xml
+++ b/app/src/main/res/layout/fragment_add_route_map.xml
@@ -39,6 +39,9 @@
             android:layout_marginEnd="17dp"
             android:src="@drawable/circle_white_gps"
             android:elevation="4dp"
+            android:onClick="@{mapSearchfrag::onGPSClick}"
+            android:clickable="true"
+            android:focusable="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toTopOf="@id/layout_location"/>
 
