--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -122,57 +122,18 @@
             app:layout_constraintStart_toStartOf="@id/tvSelLocal"
             app:layout_constraintTop_toBottomOf="@id/tvSelLocal">
 
-            <com.thustop_00.widgets.NotoButton
-                android:id="@+id/bt_local1"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_marginStart="25dp"
-                android:layout_marginTop="22dp"
-                android:background="@drawable/button_local"
-                android:onClick="@{mainfrag::onLocal1Click}"
-                android:text="@string/bt_local1"
-                android:textColor="@color/TextBlack"
-                android:textSize="13sp"
-                app:layout_constraintDimensionRatio="1"
-                app:layout_constraintEnd_toStartOf="@id/bt_local2"
-                app:layout_constraintHorizontal_weight="1"
-                app:layout_constraintStart_toStartOf="@id/layout_local"
-                app:layout_constraintTop_toTopOf="@id/layout_local" />
-
-            <com.thustop_00.widgets.NotoButton
-                android:id="@+id/bt_local2"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_marginStart="27dp"
-                android:background="@drawable/button_local"
-                android:onClick="@{mainfrag::onLocal2Click}"
-                android:text="@string/bt_local2"
-                android:textColor="@color/TextBlack"
-                android:textSize="13sp"
-                app:layout_constraintBottom_toBottomOf="@id/bt_local1"
-                app:layout_constraintDimensionRatio="1"
-                app:layout_constraintEnd_toStartOf="@id/bt_local3"
-                app:layout_constraintHorizontal_weight="1"
-                app:layout_constraintStart_toEndOf="@id/bt_local1"
-                app:layout_constraintTop_toTopOf="@id/bt_local1" />
-
-            <com.thustop_00.widgets.NotoButton
-                android:id="@+id/bt_local3"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_marginStart="27dp"
-                android:layout_marginEnd="25dp"
-                android:background="@drawable/button_local"
-                android:onClick="@{mainfrag::onLocal3Click}"
-                android:text="@string/bt_local3"
-                android:textColor="@color/TextBlack"
-                android:textSize="13sp"
-                app:layout_constraintBottom_toBottomOf="@id/bt_local2"
-                app:layout_constraintDimensionRatio="1"
-                app:layout_constraintEnd_toEndOf="@id/layout_local"
-                app:layout_constraintHorizontal_weight="1"
-                app:layout_constraintStart_toEndOf="@id/bt_local2"
-                app:layout_constraintTop_toTopOf="@id/bt_local2" />
+            <GridView
+                android:id="@+id/gv_local"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginVertical="23dp"
+                android:layout_marginHorizontal="10dp"
+                android:gravity="center"
+                android:numColumns="3"
+                android:verticalSpacing="23dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
 
             <com.thustop_00.widgets.NotoTextView
                 android:id="@+id/tv_local1"
@@ -186,7 +147,7 @@
                 android:textSize="13sp"
                 app:layout_constraintEnd_toEndOf="@id/layout_local"
                 app:layout_constraintStart_toStartOf="@id/layout_local"
-                app:layout_constraintTop_toBottomOf="@id/bt_local2" />
+                app:layout_constraintTop_toBottomOf="@id/gv_local" />
 
             <com.thustop_00.widgets.NotoTextView
                 android:id="@+id/tv_local2"
@@ -195,6 +156,7 @@
                 android:layout_marginTop="3dp"
                 android:text="@string/tv_local2"
                 android:textSize="9sp"
+                android:letterSpacing="-0.07"
                 app:layout_constraintBottom_toTopOf="@id/tv_request"
                 app:layout_constraintEnd_toEndOf="@id/layout_local"
                 app:layout_constraintStart_toStartOf="@id/layout_local"
@@ -204,8 +166,9 @@
                 android:id="@+id/tv_request"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="29dp"
-                android:layout_marginBottom="28dp"
+                android:layout_marginTop="19dp"
+                android:layout_marginBottom="18dp"
+                android:padding="10dp"
                 android:onClick="@{mainfrag::onTownRequestClick}"
                 android:text="@string/tv_request"
                 android:textColor="@color/Primary"
