타임피커 해결했는데 언어문제있음/우리동네요청 버튼 경우/terms체크박스/settingterms페이지

--- a/app/src/main/res/layout/fragment_add_route_time_set.xml
+++ b/app/src/main/res/layout/fragment_add_route_time_set.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
     <data>
         <variable
             name="AddRouteTimefrag"
@@ -112,7 +113,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="25dp"
                 style="@style/EtStyle"
-                android:text="오전     11시     25분"
+                tools:text="AM              11              25"
                 android:textSize="14sp"
                 android:textColor="@color/TextBlack"
                 android:gravity="center"
@@ -135,6 +136,17 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
+
+        <com.thustop_00.widgets.NotoTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginStart="20dp"
+            android:text="@string/tv_time_notice"
+            android:textColor="@color/TextGray"
+            android:textSize="9sp"
+            app:layout_constraintTop_toBottomOf="@id/layout_time"
+            app:layout_constraintStart_toStartOf="@id/layout_time"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
