--- a/app/src/main/res/layout/fragment_register_terms.xml
+++ b/app/src/main/res/layout/fragment_register_terms.xml
@@ -22,66 +22,61 @@
             android:id="@+id/tv_agree"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:layout_gravity="center"
             android:text="@string/tv_agree"
-            android:textColor="#202020"
+            android:textColor="@color/Black"
             android:textSize="18sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@id/iv_agree"
+            android:letterSpacing="-0.1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@id/guideline1"
-            app:layout_constraintVertical_bias="0.110000014"
-            app:layout_constraintVertical_chainStyle="packed"
             app:notoTextStyle="medium" />
 
         <ImageView
             android:id="@+id/iv_agree"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="21dp"
+            android:layout_width="234dp"
+            android:layout_height="246dp"
+            android:layout_marginTop="27dp"
             app:srcCompat="@drawable/img_terms"
             app:layout_constraintTop_toBottomOf="@id/tv_agree"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/cb_agree_all"
-            />
+            app:layout_constraintEnd_toEndOf="parent"            />
 
         <CheckBox
             android:id="@+id/cb_agree_all"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
+            android:layout_marginStart="50dp"
             android:button="@drawable/checkbox_round"
             android:paddingStart="10dp"
-            app:layout_constraintTop_toBottomOf="@id/iv_agree"
-            app:layout_constraintStart_toStartOf="@id/tv_agree"
-            app:layout_constraintBottom_toTopOf="@id/cb_agree1"
-            app:layout_constraintVertical_chainStyle="packed"/>
-
-        <com.thustop_00.widgets.NotoTextView
-            android:id="@+id/tv_agree_all"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:text="@string/cb_agree_all"
-            android:textColor="#202020"
+            android:textColor="@color/Black"
             android:textSize="14sp"
+            android:letterSpacing="-0.1"
             app:notoTextStyle="regular"
-
-            app:layout_constraintStart_toEndOf="@id/cb_agree_all"
-            app:layout_constraintTop_toTopOf="@id/cb_agree_all"
-            app:layout_constraintBottom_toBottomOf="@id/cb_agree_all"/>
+            app:layout_constraintTop_toBottomOf="@id/iv_agree"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/cb_agree1" />
 
 
         <CheckBox
             android:id="@+id/cb_agree1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="17dp"
             android:button="@drawable/checkbox_trans_sel"
             android:paddingStart="10dp"
+            android:text="@string/cb_agree1"
+            android:textColor="@color/TextBlack"
+            android:textSize="12sp"
+            android:letterSpacing="-0.1"
+            app:notoTextStyle="regular"
+            app:layout_constraintVertical_chainStyle="packed"
             app:layout_constraintTop_toBottomOf="@id/cb_agree_all"
-            app:layout_constraintStart_toStartOf="@id/tv_agree"
+            app:layout_constraintStart_toStartOf="@id/cb_agree_all"
             app:layout_constraintBottom_toTopOf="@id/cb_agree2"/>
 
 
@@ -89,11 +84,12 @@
             android:id="@+id/tv_agree1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/cb_agree1"
-            android:textColor="#4b4b4b"
-            android:textSize="12sp"
+            android:layout_marginEnd="52dp"
+            android:text="@string/tv_view"
+            android:textColor="@color/TextGray"
+            android:textSize="11sp"
             app:notoTextStyle="regular"
-            app:layout_constraintStart_toEndOf="@id/cb_agree1"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@id/cb_agree1"
             app:layout_constraintBottom_toBottomOf="@id/cb_agree1"/>
 
@@ -104,19 +100,25 @@
             android:layout_marginTop="5dp"
             android:button="@drawable/checkbox_trans_sel"
             android:paddingStart="10dp"
+            android:letterSpacing="-0.1"
+            android:text="@string/cb_agree2"
+            android:textColor="@color/TextBlack"
+            android:textSize="12sp"
+            app:notoTextStyle="regular"
+            app:layout_constraintVertical_chainStyle="packed"
             app:layout_constraintTop_toBottomOf="@id/cb_agree1"
-            app:layout_constraintStart_toStartOf="@id/tv_agree"
+            app:layout_constraintStart_toStartOf="@id/cb_agree_all"
             app:layout_constraintBottom_toTopOf="@id/cb_agree3"/>
 
         <com.thustop_00.widgets.NotoTextView
             android:id="@+id/tv_agree2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/cb_agree2"
-            android:textColor="#4b4b4b"
-            android:textSize="12sp"
+            android:text="@string/tv_view"
+            android:textColor="@color/TextGray"
+            android:textSize="11sp"
             app:notoTextStyle="regular"
-            app:layout_constraintStart_toEndOf="@id/cb_agree2"
+            app:layout_constraintEnd_toEndOf="@id/tv_agree1"
             app:layout_constraintTop_toTopOf="@id/cb_agree2"
             app:layout_constraintBottom_toBottomOf="@id/cb_agree2"/>
 
@@ -127,19 +129,25 @@
             android:layout_marginTop="5dp"
             android:button="@drawable/checkbox_trans_sel"
             android:paddingStart="10dp"
+            android:letterSpacing="-0.1"
+            android:text="@string/cb_agree3"
+            android:textColor="@color/TextBlack"
+            android:textSize="12sp"
+            app:notoTextStyle="regular"
+            app:layout_constraintVertical_chainStyle="packed"
             app:layout_constraintTop_toBottomOf="@id/cb_agree2"
-            app:layout_constraintStart_toStartOf="@id/tv_agree"
+            app:layout_constraintStart_toStartOf="@id/cb_agree_all"
             app:layout_constraintBottom_toTopOf="@id/cb_agree4"/>
 
         <com.thustop_00.widgets.NotoTextView
             android:id="@+id/tv_agree3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/cb_agree3"
-            android:textColor="#4b4b4b"
-            android:textSize="12sp"
+            android:text="@string/tv_view"
+            android:textColor="@color/TextGray"
+            android:textSize="11sp"
             app:notoTextStyle="regular"
-            app:layout_constraintStart_toEndOf="@id/cb_agree3"
+            app:layout_constraintEnd_toEndOf="@id/tv_agree1"
             app:layout_constraintTop_toTopOf="@id/cb_agree3"
             app:layout_constraintBottom_toBottomOf="@id/cb_agree3"/>
 
@@ -150,18 +158,24 @@
             android:layout_marginTop="5dp"
             android:button="@drawable/checkbox_trans_sel"
             android:paddingStart="10dp"
+            android:letterSpacing="-0.1"
+            android:text="@string/cb_agree4"
+            android:textColor="@color/TextBlack"
+            android:textSize="12sp"
+            app:notoTextStyle="regular"
+            app:layout_constraintVertical_chainStyle="packed"
             app:layout_constraintTop_toBottomOf="@id/cb_agree3"
-            app:layout_constraintStart_toStartOf="@id/tv_agree"
+            app:layout_constraintStart_toStartOf="@id/cb_agree_all"
             app:layout_constraintBottom_toTopOf="@id/cb_agree5"/>
         <com.thustop_00.widgets.NotoTextView
             android:id="@+id/tv_agree4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/cb_agree4"
-            android:textColor="#4b4b4b"
-            android:textSize="12sp"
+            android:text="@string/tv_view"
+            android:textColor="@color/TextGray"
+            android:textSize="11sp"
             app:notoTextStyle="regular"
-            app:layout_constraintStart_toEndOf="@id/cb_agree4"
+            app:layout_constraintEnd_toEndOf="@id/tv_agree1"
             app:layout_constraintTop_toTopOf="@id/cb_agree4"
             app:layout_constraintBottom_toBottomOf="@id/cb_agree4"/>
 
@@ -172,19 +186,25 @@
             android:layout_marginTop="5dp"
             android:button="@drawable/checkbox_trans_sel"
             android:paddingStart="10dp"
+            android:letterSpacing="-0.1"
+            android:text="@string/cb_agree5"
+            android:textColor="@color/TextBlack"
+            android:textSize="12sp"
+            app:notoTextStyle="regular"
+            app:layout_constraintVertical_chainStyle="packed"
             app:layout_constraintTop_toBottomOf="@id/cb_agree4"
-            app:layout_constraintStart_toStartOf="@id/tv_agree"
+            app:layout_constraintStart_toStartOf="@id/cb_agree_all"
             app:layout_constraintBottom_toTopOf="@id/cb_agree6"/>
 
         <com.thustop_00.widgets.NotoTextView
             android:id="@+id/tv_agree5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/cb_agree5"
-            android:textColor="#4b4b4b"
-            android:textSize="12sp"
+            android:text="@string/tv_view"
+            android:textColor="@color/TextGray"
+            android:textSize="11sp"
             app:notoTextStyle="regular"
-            app:layout_constraintStart_toEndOf="@id/cb_agree5"
+            app:layout_constraintEnd_toEndOf="@id/tv_agree1"
             app:layout_constraintTop_toTopOf="@id/cb_agree5"
             app:layout_constraintBottom_toBottomOf="@id/cb_agree5"/>
 
@@ -195,19 +215,25 @@
             android:layout_marginTop="5dp"
             android:button="@drawable/checkbox_trans_sel"
             android:paddingStart="10dp"
+            android:letterSpacing="-0.1"
+            android:text="@string/cb_agree6"
+            android:textColor="@color/TextBlack"
+            android:textSize="12sp"
+            app:notoTextStyle="regular"
+            app:layout_constraintVertical_chainStyle="packed"
             app:layout_constraintTop_toBottomOf="@id/cb_agree5"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="@id/tv_agree"/>
+            app:layout_constraintBottom_toTopOf="@id/bt_agree"
+            app:layout_constraintStart_toStartOf="@id/cb_agree_all"/>
 
         <com.thustop_00.widgets.NotoTextView
             android:id="@+id/tv_agree6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/cb_agree6"
-            android:textColor="#4b4b4b"
-            android:textSize="12sp"
+            android:text="@string/tv_view"
+            android:textColor="@color/TextGray"
+            android:textSize="11sp"
             app:notoTextStyle="regular"
-            app:layout_constraintStart_toEndOf="@id/cb_agree6"
+            app:layout_constraintEnd_toEndOf="@id/tv_agree1"
             app:layout_constraintTop_toTopOf="@id/cb_agree6"
             app:layout_constraintBottom_toBottomOf="@id/cb_agree6"/>
 
@@ -215,11 +241,12 @@
             android:id="@+id/bt_agree"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintWidth_percent="0.75"
+            android:layout_marginHorizontal="20dp"
             android:layout_marginBottom="50dp"
             android:background="@drawable/bg_round25_graycf"
             android:text="@string/bt_agree"
-            android:textColor="#ffffff"
+            android:textColor="@color/White"
+            android:textSize="16sp"
             app:notoTextStyle="medium"
             android:onClick="@{AgreeTermsfrag::onAgreeClick}"
             app:layout_constraintBottom_toBottomOf="parent"
