노선 추가 Edittext 동작 수정/이용 내역 티켓 recyclerview 매니져 추가

--- a/app/src/main/res/layout/fragment_add_route_search.xml
+++ b/app/src/main/res/layout/fragment_add_route_search.xml
@@ -12,7 +12,7 @@
             android:layout_height="wrap_content"
             android:elevation="11dp"
             android:orientation="horizontal"
-            app:layout_constraintGuide_begin="?attr/actionBarSize" />
+            app:layout_constraintGuide_begin="@dimen/toolbar_height" />
 
         <com.thustop_00.widgets.NotoEditText
             android:id="@+id/et_dummy"
